--- a/GhostProjectv2/GhostProjectv2.csproj
+++ b/GhostProjectv2/GhostProjectv2.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.28" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.28" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.30" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.30" />
   </ItemGroup>
 
   <ItemGroup>
