--- a/GhostProjectv2/GhostProjectv2.csproj
+++ b/GhostProjectv2/GhostProjectv2.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.30" />
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="3.1.2.13" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
