--- a/GhostProjectv2/ClientApp/package.json
+++ b/GhostProjectv2/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "~4.6.1",
     "chart.js": "^4.0.1",
     "jquery": "~3.6.0",
