--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ GhostProjectv2/bin/Debug/
 GhostProjectv2/obj/
 GhostProjectv2/bin/Debug/netcoreapp3.1/
 GhostProjectv2/ClientApp/node_modules/
+xUnit_EnhetstestAvAkjseSide/bin/Debug/netcoreapp3.1/
+xUnit_EnhetstestAvAkjseSide/obj/Debug/netcoreapp3.1/
